<resources>
    <string name="app_name">Furigana Transform</string>
    <string name="to_furigana">Transform</string>
    <string name="import_files">File Process</string>
    <string name="scan">scan</string>
    <string name="input_hint">Input your text with kanji here.</string>
    <string name="file_process_get">reading file successful!</string>
    <string name="file_process_put">creating file successful!</string>
    <string name="output_with_furigana">Output with furigana</string>
    <string name="nekotori">\@nekotori</string>
</resources>
