<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/header"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/White"
            android:textSize="40sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/inputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/light_blue"
        android:orientation="horizontal"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" >
    <EditText
        android:layout_margin="5dp"
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/white"
        android:hint="@string/input_hint"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/gray"
        android:scrollHorizontally="false"
        android:textSize="20sp"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/resultTextLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/inputTextLayout"
        app:layout_constraintBottom_toTopOf="@id/tool_bar">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/output_with_furigana"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="start"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/outputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tool_bar"
        style="@style/Widget.AppCompat.ButtonBar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="50dp">
        <Button
            android:id="@+id/furi_Button"
            style="@style/ButtonStyle"
            android:text="@string/to_furigana"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/file_Button"
            style="@style/ButtonStyle"
            android:layout_marginStart="@dimen/button_margin"
            android:text="@string/import_files"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/scan_Button"
            style="@style/ButtonStyle"
            android:layout_marginStart="@dimen/button_margin"
            android:text="@string/scan"
            android:layout_height="match_parent"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>